# neorg-language-server

./: .gitignore  Cargo.toml  README.norg  launch.lua  todo.norg
crates/neorg-dirman/: Cargo.toml
crates/neorg-dirman/src/: lib.rs  workspace.rs  workspace_traverse.rs
src/: config.rs  document.rs  main.rs  neorg.rs  norg.rs  range.rs  session.rs  state.rs  syntax.rs  tree_sitter.rs  workspace.rs
src/dirman/: mod.rs  workspace.rs  workspace_traverse.rs
src/handlers/: mod.rs  notification.rs  request.rs
src/norg/: mod.rs
src/norg/blocks/: code_desc.md  code_text.txt
test/: baz.norg  index.norg
test/folder/: bar.norg  foo.norg
