[package]
name = "neorg-language-server"
description = "Language Server for Neorg"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
license_file = "LICENSE"
repository = "https://github.com/boltlessengineer/neorg-language-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
log = "0.4.20"
lsp-server = "0.7.4"
lsp-types = "0.95.0"
neorg-dirman = { git = "https://github.com/boltlessengineer/neorg-dirman", branch = "pr1" }
rayon = "1.8.0"
ropey = "1.6.1"
serde = "1.0.193"
serde_json = "1.0.108"
structured-logger = "1.0.3"
tree-sitter = "0.20.10"
tree-sitter-norg3 = { git = "https://github.com/boltlessengineer/tree-sitter-norg3-pr1", branch = "paragraph_break" }
walkdir = "2.4.0"
